trybuild_tests/tests/trybuild/fail/butane_type_no_args.rs
use butane::butane_type;

// This should fail - butane_type expects an argument
#[butane_type]
pub enum Status {
    Active,
    Inactive,
}

fn main() {}
